--- a/Džeronimo.mw
+++ b/Džeronimo.mw
@@ -2,11 +2,13 @@
 | изображение = Geronimo (Goyathlay), a Chiricahua Apache, full-length, kneeling with rifle, 1887 - NARA - 530880.jpg
 | описание изображения = Džeronimo vl 1887
 }}
-'''Džeronimo''' ({{lang-en|Geronimo}}, [[čirikaua]]n nimi '''Gujahle''' (Guyaałé), midä znamoičeb ''«Se, ken haikostase»''; sünd. [[16. kezaku]] [[1829]] — kol. [[17. uhoku]] [[1909]]) oli [[apačid]]en čirikaua-heimon sodapämez', kudamb oli vastustelendan ezinenas 25 voden joksten, konz Meksikan, i sid' AÜV:oiden sodaväged napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikaižele armijale.
+'''Džeronimo''' ({{lang-en|Geronimo}}, [[čirikaua]]n nimi '''Gojatlai''' (Goyaałé), midä znamoičeb ''«Se, ken haikostase»''; sünd. [[16. kezaku]] [[1829]], Hil, Arispe, [[Meksikan Ezmäine Tazovaldkund]] — kol. [[17. uhoku]] [[1909]], [[Fort-Sill]], Komanče, [[Oklahom]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) oli [[apačid]]en čirikaua-heimon sodapämez', kudamb oli vastustelendan ezinenas 25 voden joksten, konz Meksikan, i sid' AÜV:oiden sodaväged napriba anastada hänen heimon mad. Vl [[1886]] hänele pidi anttas amerikaižele armijale.
 
-Mez' kändihe heimon sodavejaks meksikalaižiden rikojan londan jäl'ghe, hän oli äjiden reidoiden pämeheks meksikalaižid i AÜV:oiden armijad vaste. Džeronimon jouk oli vähäluguižemb toras kaiken, no sai tetabut ičeze rohktusen tagut, lähtli aznoičendata vihanikoiden polespäi.
+Mez' kändihe heimon sodavejaks meksikalaižiden rikojan londan jäl'ghe vl 1851, hän oli äjiden reidoiden pämeheks meksikalaižid i AÜV:oiden armijad vaste. Džeronimon jouk oli vähäluguižemb toras kaiken, no sai tetabut ičeze rohktusen tagut, lähtli aznoičendata vihanikoiden polespäi. Torazi kodimaižen [[Arizon]]-štatan i [[Nju Neksiko]]-štatan maiš, Meksikan pohjoižiš štatoiš.
 
-Otandan plenha jäl'ghe Džeronimo kirjuti avtobiografijad. Hänen joukun vägitegod oma fil'mdud severz'-se kerdoid.
+Otandan plenha jäl'ghe Džeronimo kirjuti avtobiografijad. Hänen joukun vägitegoiden istorii om fil'mdud amerikaižil kinostudijoil severz'-se kerdoid.
+
+Mez' besedoiči ühesanke naiženke, kaks' poigad kazvoiba.
 
 == Homaičendad ==
 <references />
