--- a/Džeronimo.mw
+++ b/Džeronimo.mw
@@ -18,3 +18,4 @@ Mez' besedoiči ühesanke naiženke, kaks' poigad kazvoiba.
 {{stub}}
 [[Kategorii:Indejalaižed]]
 [[Kategorii:Sodapämehed]]
+[[Kategorii:Kolnuded Oklahomas]]
