--- a/Džeronimo.mw
+++ b/Džeronimo.mw
@@ -18,4 +18,6 @@ Mez' besedoiči ühesanke naiženke, kaks' poigad kazvoiba.
 {{stub}}
 [[Kategorii:Indejalaižed]]
 [[Kategorii:Sodapämehed]]
+[[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:Sündnuded Meksikha]]
 [[Kategorii:Kolnuded Oklahomas]]
