--- a/Ištui_Härg.mw
+++ b/Ištui_Härg.mw
@@ -13,3 +13,5 @@
 {{stub}}
 [[Kategorii:Indejalaižed]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:Sündnuded Suvidakotha]]
+[[Kategorii:Kolnuded Suvidakotas]]
