--- a/Rait_Frenk_Lloid.mw
+++ b/Rait_Frenk_Lloid.mw
@@ -12,3 +12,4 @@ Frenk Lloid Rait om «organižen arhitekturan» sädai, avoinuden planan propaga
 [[Kategorii:AÜV:oiden arhitektorad]]
 [[Kategorii:Arhitektorad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
+[[Kategorii:Kolnuded Finiksas]]
