--- a/Gori_Edvard.mw
+++ b/Gori_Edvard.mw
@@ -14,3 +14,4 @@
 [[Kategorii:Pirdajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Čikagho]]
+[[Kategorii:Kolnuded Massačusetsas]]
