--- a/Foulks_Artur.mw
+++ b/Foulks_Artur.mw
@@ -1,5 +1,10 @@
 {{Personalii}}
-'''Artur Aleksander Foulks''' ({{lang-en|Arthur Alexander Foulkes}}; sünd. [[11. semendku]] [[1928]], [[Met'ju-Taun]], [[Sur' Inagua]]-sar', [[Bagaman Sared|Bagamad]]) oli 10. [[Bagaman Sared|Bagaman Sariden]] jenaral-gubernatoraks vozil 2010-2014. [[Margerit Pindling]] radab hänen jäl'ghetulijaks nügüd'.
+'''Artur Aleksander Foulks''' ({{lang-en|Arthur Alexander Foulkes}}; sünd. [[11. semendku]] [[1928]], [[Met'ju-Taun]], [[Sur' Inagua]]-sar', [[Bagaman Sared|Bagamad]]) oli 10. [[Bagaman Sared|Bagaman Sariden]] jenaral-gubernatoraks vozil 2010−2014. [[Margerit Pindling]] tegihe hänen jäl'ghetulijaks.
+
+== Biografii ==
+Foulksan ezmäine professii om lehtezmez', hän radoi «Bahamian Times»-lehtesen päredaktoran vll 1962−1967. Mez' oli valitud parlamentan ühtnijaks ezmäižen kerdan vl 1967, eziti Progressivišt liberališt partijad i radoi [[Linden Pindling]]an ohjastuses kommunikacijoiden da turizman ministran. Vll 1972−1982 tuleban aigan prezident oli Senatan ühtnijan, sid' vhesai 1992 eziti konservativišt Joudjališt nacionališt likundad (ühtni sen alusenpanendha vl 1971) parlamentan alakodiš.
+
+Vl 1992 politikanmez' oli pandud valdkundan korktan komissaran radnikusele Sures Britanijas, ühten aigan oli sur'oigenuden Francijas, Saksanmas, Italijas i Bel'gijas, valdkundan ezitajan Evropan Ühtištuses i Nacijoiden Ühtištuses. Vl 1999 Foulks pördui kodimale i radoi sur'oigenudeks Kitaiš i Kubas jäten Bagamoiš. Vspäi 2007 mez' oli Bagaman Sariden Informacijan radnikoičendoiden pämeheks.
 
 == Homaičendad ==
 <references/>
