--- a/Foulks_Artur.mw
+++ b/Foulks_Artur.mw
@@ -4,7 +4,7 @@
 == Biografii ==
 Foulksan ezmäine professii om lehtezmez', hän radoi «Bahamian Times»-lehtesen päredaktoran vll 1962−1967. Mez' oli valitud parlamentan ühtnijaks ezmäižen kerdan vl 1967, eziti Progressivišt liberališt partijad i radoi [[Linden Pindling]]an ohjastuses kommunikacijoiden da turizman ministran. Vll 1972−1982 tuleban aigan prezident oli Senatan ühtnijan, sid' vhesai 1992 eziti konservativišt Joudjališt nacionališt likundad (ühtni sen alusenpanendha vl 1971) parlamentan alakodiš.
 
-Vl 1992 politikanmez' oli pandud valdkundan korktan komissaran radnikusele Sures Britanijas, ühten aigan oli sur'oigenuden Francijas, Saksanmas, Italijas i Bel'gijas, valdkundan ezitajan Evropan Ühtištuses i Nacijoiden Ühtištuses. Vl 1999 Foulks pördui kodimale i radoi sur'oigenudeks Kitaiš i Kubas jäten Bagamoiš. Vspäi 2007 mez' oli Bagaman Sariden Informacijan radnikoičendoiden pämeheks.
+Vl 1992 politikanmez' oli pandud valdkundan korktan komissaran radnikusele [[Sur' Britanii|Sures Britanijas]], ühten aigan oli sur'oigenuden Francijas, Saksanmas, Italijas i Bel'gijas, valdkundan ezitajan [[Evropan Ühtištuz|Evropan Ühtištuses]] i [[Nacijoiden ühtištuz|Nacijoiden ühtištuses]]. Vl 1999 Foulks pördui kodimale i radoi sur'oigenudeks Kitaiš i Kubas jäten Bagamoiš. Vspäi 2007 mez' oli Bagaman Sariden Informacijan radnikoičendoiden pämeheks.
 
 == Homaičendad ==
 <references/>
