--- a/An-26.mw
+++ b/An-26.mw
@@ -1,5 +1,9 @@
 [[Fail:Russian Air Force Antonov An-26 Medvedev-1.jpg|thumb|right|250px|Antonov An-26]]
-'''An-26''' ([[ukrainan kel'|ukr]]. i {{lang-ru|Ан-26}}; [[PAKO:n kodifikacii|PAKO:n kodifikacijan]] mödhe — '''Curl''' «vehor'») om «Antonov»:an [[Nevondkundaline Ühtištuz|nevondkundaline]] soda[[lendim]], [[An-24]]-passažirlendimen variant. Ezmäine lenduz oli [[1969]]-nden voden semendkul. Kaik om pästtud 1,403 lendint, lopihe vl 1986.
+'''An-26''' ([[ukrainan kel'|ukr]]. i {{lang-ru|Ан-26}}; [[PAKO:n kodifikacii|PAKO:n kodifikacijan]] mödhe — '''Curl''' «vehor'») om «[[Antonov (kompanii)|Antonov]]»-konstruktorbüron [[Nevondkundaline Ühtištuz|nevondkundaline]] sodatransportine [[lendim]], [[An-24]]-passažirlendim om ottud aluseks. Päkonstruktor V.A. Garvardt.
+
+Modelin ezmäine lenduz oli [[1969]]-nden voden semendkul. Kaik om pästtud 1,403 lendint Kijevan aviategimel vll 1973−1986, kaikiš äiluguižemb sodatransportine lendim. Passažirine An-26-100-lendim pästtihe sišpäi ümbriradmižel tegimel, 43 matknikad mülündmäranke.
+
+Pästtud sodalendimed ekspluatiruidas tähäsai Kazahstanan, Ukrainan, Vaugedvenäman i Venäman il'mvägil. Passažirversii om Kostroman i Habarovskan aviaedheotandoiš.
 
 {{Commons|Antonov An-26}}
 
