--- a/Vatica_guangxiensis.mw
+++ b/Vatica_guangxiensis.mw
@@ -1,4 +1,23 @@
 {{kursiv pälkirjuteses}}
+{{Taxobox
+ | name         = ''Vatica guangxiensis''
+ | image title  = 
+ | image file   =
+ | image descr  =
+ | regnum       = Kazmused
+ | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
+ | classis      = [[Kaksidülehtesižed]] (''Dicotyledones'')
+ | ordo         = [[Mal'vänikoižed]] (''Malvales'')
+ | familia      = [[Dipterokarpižed]] (''Dipterocarpaceae'')
+ | genus        = ''[[Vatica]]''
+ | species      = '''''Vatica guangxiensis'''''
+ | latin        = {{btname|Vatica guangxiensis |[[S. L. Mo]]}}
+ | wikispecies  = Vatica guangxiensis
+ | commons      =
+ | itis         = 0
+ | ncbi         = 0
+ | range map    =
+}}
 '''''Vatica guangxiensis''''' om [[kazmused|kazmusiden]] erik, mülütadas [[Dipterokarpižed]]-sugukundha (''Dipterocarpaceae''). S. L. Mo-botanikantedomez' avaiži da ümbrikirjuti sidä vl 1980.
 
 [[Kitai]]n endemik, kus se om kadomižen grazindan al; edel se kazvoi [[Vjetnam]]as-ki, no kadoi siš. Sijaližed nimed — ''广西青梅'' [''guangsi činmei''] ([[kitajan kel'|kitajan kelel]]), ''Táu Quảng Tây'' ([[vjetnaman kel'|vjetnaman kelel]]).
