--- a/Saharanpähut_(Čatir_Dag).mw
+++ b/Saharanpähut_(Čatir_Dag).mw
@@ -1,10 +1,12 @@
 {{znamoičendad|Saharanpähut}}
 [[Fail:Цукрова голівка-Четир-Даг.JPG|thumbnail|right|250px|Saharanpähut]]
-[[Fail:Anghar-Burun.jpeg|thumbnail|right|250px|[[Angara Burun]] da Saharanpähut.]]
-'''Saharanpähut''' ([[venäkel'|ven.]]: ''Сахарная Головка'', [[ukrainan kel'|ukr.]]: ''Цукрова Голівка'') om mägi [[Krim]]as. Om [[Čatir Dag]]-mägisel'gan pala, läz [[Angara Burun]]-mäged.
+[[Fail:Anghar-Burun.jpeg|thumb|right|250px|[[Angara Burun]] (tagamal) i Saharanpähut]]
+'''Saharanpähut''' ({{lang-uk|Цукрова Голівка}}, {{lang-ru|Сахарная Головка}}) om mägi [[Krim]]as. Om [[Čatir Dag]]-mägisel'gan pala, sijadase läz [[Angara Burun]]-mäged.
 
-Saharanpähut-mägen korktuz om 1053 metrad.
+Saharanpähut-mägen korktuz om 1053 metrad ü.m.t..
+
+{{Commons|Category:Tsukrova Holivka}}
+
 {{stub}}
-
 [[Kategorii:Kriman mäged]]
 [[Kategorii:Mäged kirjamišton mödhe]]
