--- a/Saharanpähut_(Čatir_Dag).mw
+++ b/Saharanpähut_(Čatir_Dag).mw
@@ -1,9 +1,9 @@
 {{znamoičendad|Saharanpähut}}
 [[Fail:Цукрова голівка-Четир-Даг.JPG|thumbnail|right|250px|Saharanpähut]]
-[[Fail:Anghar-Burun.jpeg|thumb|right|250px|[[Angara Burun]] (tagamal) i Saharanpähut]]
-'''Saharanpähut''' ({{lang-uk|Цукрова Голівка}}, {{lang-ru|Сахарная Головка}}) om mägi [[Krim]]as. Om [[Čatir Dag]]-mägisel'gan pala, sijadase läz [[Angara Burun]]-mäged.
+[[Fail:Anghar-Burun.jpeg|thumb|right|250px|[[Angara Burun]] (tagamal) i Saharanpähut, nägu [[Angaran ülämäneg]]espäi]]
+'''Saharanpähut''' ({{lang-uk|Цукрова Голівка}}, {{lang-ru|Сахарная Головка}}) om mägi [[Krim]]an suves. Om [[Čatir Dag]]-mägisel'gan pala, sijadase läz [[Angara Burun]]-mäged sen pautkel.
 
-Saharanpähut-mägen korktuz om 1053 metrad ü.m.t..
+Saharanpähut-mägen korktuz om 1053 metrad ü.m.t.. Se om kazvahtunu mecal konus pallištonke mägenpäl, om kall'vöid pautkil. Sai nimitust valatud [[sahar (produkt)|sahar-rafinadan]] pojavan forman taguiči.
 
 {{Commons|Category:Tsukrova Holivka}}
 
