--- a/Fareran_kel'.mw
+++ b/Fareran_kel'.mw
@@ -1,7 +1,18 @@
-[[Fail:Faroe islands isoglosses.png|thumb|right|250px|Dialektoiden kart.]]
-'''Fareran kel'''' (ičeze nimituz: ''Føroyskt mál'' [ˈføːɹɪst ˈmɔaːl]) om [[Danii|Danijan]] [[Fareran Sared]]-avtonomijan üks' oficialižiš kelišpäi. Pagižijoiden lugu om 69 150 ristitud (2015).
+[[Fail:Faroe islands isoglosses.png|thumb|right|250px|Paginoiden kart]]
+'''Fareran kel'''' (ičeze nimituz: ''Føroyskt mál'' [ˈføːɹɪst ˈmɔaːl]) om [[Danii|Danijan]] [[Fareran Sared]]-avtonomijan üks' oficialižiš kelišpäi (vspäi 1948). Se om indoevropine, [[germanižed keled|germanine]] kel'.
 
-Se om indoevropine, [[germanižed keled|germanine]] kel'. Fareran kirjkel' om [[latinan kirjamišt]]on pohjal.
+Pagižijoiden lugu om 69 150 ristitud (2015). Sariden ristitišton enamba ühesad kümnendest pagižeb fareran kelel, no läz kaik eläjad mahttas pagišta [[danijan kel'|danijan]]-ki kelel, openduz vedase molembil kelil.
+
+Fareran kirjkel' om [[latinan kirjamišt]]on pohjal, om sätud 19. voz'sadal [[Torshavn]]-pälidnan paginal. Kaks' paginoiden gruppad: pohjoine i suvine. Lähembaine heimkel' om [[islandijan kel']].
+
+== Kirjamišt ==
+Kaik om 29 kirjant kirjamištos:
+''Aa, Áá, Bb, Dd, Ðð, Ee, Ff, Gg, Hh, Ii, Íí, Jj, Kk, Ll, Mm, Nn, Oo, Óó, Pp, Rr, Ss, Tt, Uu, Úú, Vv, Yy, Ýý, Ææ, Øø''.
+
+Voib olda toižid latinan kirjamid personaližiš nimiš.
+
+== Homaičendad ==
+<references />
 
 {{Commons|Faroese language}}
 
