--- a/Fareran_kel'.mw
+++ b/Fareran_kel'.mw
@@ -20,3 +20,4 @@ Voib olda toižid latinan kirjamid personaližiš nimiš.
 [[Kategorii:Germanižed keled]]
 [[Kategorii:Keled i dialektad kirjamišton mödhe]]
 [[Kategorii:Danijan keled]]
+[[Kategorii:Fareran Sared]]
