*Empty MediaWiki Message*

--- a/Nürb.mw
+++ b/Nürb.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Nürb<br />Нюрба <small>(ven.)</small><br />Ньурба <small>(jakut.)</small>
- | Lidnanznam = Coat of Arms of Nyurba (Yakutia).png
+ | Lidnanznam = Nyurba COA (2016).gif
  | Flag = 
  | Lidnanznam text = Nürban lidnanznam
  | Flag text = 
@@ -25,7 +25,7 @@ Lidn sijadase [[Vilüi]]-jogen hural randal, 119 m keskmäižel korktusel valdme
 Nürb om lidnankundan üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 157 ristitud, rajonan ristitišton kaks' videndest. Kaikiš suremb ristitišt oli vl 1989 — 11 934 eläjad.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 10 157 ristitud, rajonan ristitišton kaks' videndest. Kaikiš suremb ristitišt oli 11 934 eläjad vl 1989.
 
 == Ižanduz da transport ==
 Ižandusen päsarakod oma [[diamant]]oiden samine ([[ALROSA]]-kompanijan Nürban kivendkombinat, Venäman diamantoiden nelländez), sauvondmaterialiden pästand, sömtegimišt da kebn tegimišt.
