--- a/Olökminsk.mw
+++ b/Olökminsk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Olökminsk<br />Олёкминск <small>(ven.)</small><br />Өлүөхүмэ <small>(jakut.)</small>
- | Lidnanznam = Coat of Arms of Olekminsk (Yakutia) (1790).png
+ | Lidnanznam = Olyokminsk city coa.gif
  | Flag = 
  | Lidnanznam text = Olökminskan lidnanznam
  | Flag text = 
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 9,202
  | Voz' = 2017
  | Pind = 12
- | Fail = 369 Олекминск. Стела возле пристани.jpg
+ | Fail = 363 Вид на Олекминск с горки.jpg
  | Pämez' = Al'bina Masina<br />(tal'vku 2017—)
  | Telefonkod = +7-41138-xx-xxx
  | Avtokod = 14
@@ -32,6 +32,15 @@ Nell' žilod mülüdas lidnankundha Olökminskan ližaks. Lidnankundan pind — 
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 9 494 ristitud, rajonan kaks' videndest. Kaikiš suremb lidnan ristitišt oli 11 478 eläjad vl 1989. Vl 2017 kaik 10 475 ristitud elihe lidnankundas.
 
 Kiruhjogilaivad ühtenzoitas Jakutskanke kezaaigan (1. kezaku — 30. sügüz'ku). Civiline lendimport (''OLZ / ОЛК'') sijadase lidnan pohjoižpäivnouzmas, 5 km keskusespäi.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+353 Олекминск. Здание администрации.jpg|Administracijan sauvuz (2016)
+357 Олекминск. Собор Спаса Преображения.jpg|Spasan Toižetamižen päjumalanpert', vn 2016 nägu
+342 Олекминск. Краеведческий музей.jpg|Kodirandantedištandmuzei (2016)
+369 Олекминск. Стела возле пристани.jpg|Randird i puišt valdmoidenno
+372 Демьян Бедный на причале в Олекминске.jpg|Jogivaldmad vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://olekminsk.sakha.gov.ru/ Olökminsk-lidnan tobmuden sait Saha (Jakutijan) Tazovaldkundan oficialižel portalal (''olekminsk.sakha.gov.ru'')] {{ref-ru}} {{ref-en}} {{ref-sah}} da sen [http://old.sakha.gov.ru/olekminsk vanh versii].
