--- a/Pokrovsk_(Saha_Tazovaldkund).mw
+++ b/Pokrovsk_(Saha_Tazovaldkund).mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Pokrovsk<br />Покровск <small>(ven.)</small><br />Покровскай / Эргис <small>(jakut.)</small>
+ | Nimi = Pokrovsk<br />Покровск <small>(ven.)</small><br />Покровскай <small>(jakut.)</small>
  | Lidnanznam = Coat of Arms of Pokrovsk (Yakutia).gif
  | Flag = Flag of Pokrovsk (Yakutia).svg
  | Lidnanznam text = Pokrovskan lidnanznam (Saha Tazovaldkund)
@@ -15,7 +15,7 @@
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
 }}
 {{Znamoičendad|Pokrovsk}}
-'''Pokrovsk''' ({{lang-ru|Покровск}}, {{lang-sah|Покровскай}}, ''Эргис'') om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an keskuzpalas. Se om [[Hangalassin ulus]]an administrativine keskuz.
+'''Pokrovsk''' ({{lang-ru|Покровск}}, {{lang-sah|Покровскай}}) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an keskuzpalas. Se om [[Hangalassin ulus]]an administrativine keskuz.
 
 == Istorii ==
 Enččel jakutalaižiden ''Tigin Darhan''-karaulpost seižui korktal nemel. Nügüdläižen eländpunktan aluz om pandud vl 1682 kuti ''Jumalanmaman katken rist-karaulpost'' ({{lang-ru|Покровский крест — караульный пост}}). Vozil 1720−1734 da 1787−1960 jumalanpert' oli olmas, sidä kävutihe naižjumalankodikš. Pokrovsk sai lidnan statusad vl 1997.
@@ -26,7 +26,9 @@ Lidn sijadase [[Lenanjogi|Len-jogen]] korktal hural randal, seižub 90 m keskmä
 Pokrovsk om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 320,81 nellikkilometrad.
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 9 495 ristitud, ulusan ristitišton kaks' seičemendest. Kaikiš suremb ristitišt oli vozil 2000−2009, enamba 10 tuhad eläjid (10 200 rist. vl 2001).
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 9 495 ristitud, ulusan ristitišton kaks' seičemendest. Kaikiš suremb ristitišt oli enamba 10 tuhad eläjid vozil 2000−2009 (10 200 rist. vl 2001).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Pühän Jumalanmaman Katken jumalanpert'<ref>[http://sobory.ru/geo/locat/20809 Pokrovskan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnas vll 2006−2007, sen 325-voččele jubilejale. Jumalanmaman Katken vanh naižjumalankodi om avaitud sen alusel vspäi 2017.
 
 == Ižanduz da transport ==
 Tegimišton sarakod oma sauvondmaterialiden tehmine, bazal'ttegesiden pästand, kombisömän tegim živatoiden täht. Maižandusen edheotand i karvanferm oma olmas lidnankundas. Biznes-tehnologijoiden kolledž om professionaližen opendusen aluzkundaks.
