toine olii kuva

--- a/Kukuruz.mw
+++ b/Kukuruz.mw
@@ -16,7 +16,7 @@
  | commons      = Category:Zea mays
  | itis         = 42269
  | ncbi         = 4577
- | range map    = MaizeYield.png
+ | range map    = Production of maize (2019).svg
  | range legend = Mail'man kazvatuz
 }}
 '''Kukuruz''' ({{lang-la|Zéa máys}}) om [[Tähkheinäd|Tähkheiniden]] sugukundan heinäsine [[kazmused|kazmuz]]. Eziauguižin kazvoi [[Meksik]]as, no nügüd' om kul'tiviruidud kaiked mail'madme.
