toine olii kuva

--- a/Kuveit.mw
+++ b/Kuveit.mw
@@ -35,7 +35,7 @@ Kaikiš korktemb čokkoim om nimetoi taho 306 metrad valdmeren pindan päl Sauda
 Londuseližed pävarad oma [[kivivoi]], toižed varad — [[londuseline gaz]], [[kala]], [[meriproduktad]].
 
 == Tobmuz ==
-[[Fail:Utzon Kuwait National Assembly.jpg|thumb|right|250px|Kuveitan Nacionaližen Suiman pert' [[El' Kuveit|El' Kuveitas]]]]
+[[Fail:Secretary Blinken Tours the Kuwaiti National Assembly and Meets with Speaker of the Kuwaiti National Assembly Marzouq Ali Mohammed Al-Ghanim (51345871621).jpg|thumb|right|250px|Kuveitan Nacionaližen Suiman pertin südäin [[El' Kuveit|El' Kuveitas]]]]
 Ohjandusen form om unitarine [[konstitucine monarhii]]. Monarh — [[Navaf Al' Ahmed Al' Džaber As Sabah]]-emir — om valdkundan pämez' vs 2020 sügüz'kun 29. päiväspäi, edeližen [[Sabah Al' Ahmed Al' Džaber As Sabah|Sabah IV]]-emiran (ohjasti vll 2006−2020) noremb vell'. Monarh paneb päministrad radsijha, voib pästta radmaspäi parlamentad miččel taht aigal.
 
 Parlament om üks'kodine Nacionaline Suim ({{lang-ar|مجلس الأمة}} ''Madžlis Al' Umma''), se mülütab 65 ühtnijad, kaik rahvaz valičeb 50 heišpäi nelläks vodeks, i päministr paneb radsijha 15 ühtnijoid-ministrid). Parlament vahvištab kronprincan (valdištmen jäl'gnikan).
