--- a/Azerbaidžan.mw
+++ b/Azerbaidžan.mw
@@ -34,7 +34,7 @@ Vn 1991 18. päiväl redukud Azerbaidžan tedištoiti ičeze ripmatomudes [[Nevo
 Valdkundan edeližed Konstitucijad oliba vahvištadud vozil 1921, 1925, 1937, 1978 i 1991. Nügüdläine kudenz' lugul Konstitucii<ref>[http://en.wikisource.org/wiki/Constitution_of_Azerbaijan Vn 1995 Azerbaidžanan Konstitucii (vn 2002 vajehtusidenke) Vikipurtkiš (''en.wikisource.org'').] {{ref-en}}</ref><ref>[http://www.constituteproject.org/ontology/Azerbaijan?lang=en Azerbaidžanan Konstitucijan tekst (2016) ''constituteproject.org''-saital.] {{ref-en}}</ref> ({{lang-az|Konstitusiyası}}) tuli väghe vn 1995 12. päiväl kül'mkud, se om olmas voziden 2002, 2009 i 2016 vajehtusidenke.
 
 == Geografijan andmused ==
-[[Fail:Azerbaijan Topography.png|thumb|left|250px|Azerbaidžanan topografine kart.]]
+[[Fail:Azerbaijan Topography.png|thumb|left|250px|Azerbaidžanan topografine kart]]
 Azerbaidžanal om mavaldkundröunoid [[Iran]]anke suves (röunan piduz — 689 km), [[Armenii|Armenijanke]] päivlaskmas (996 km), [[Turkanma]]nke (17 km) da [[Gruzii|Gruzijanke]] (428 km) lodehes, [[Venäma]]nke pohjoižes (338 km). Ühthine röunoiden piduz — 2468 km. Azerbaidžan om valdmererandatoi valdkund, no [[Kaspijan meri|Kaspijan meren]] randanpird om 713 km pitte päivnouzmas. Valdkundan pind — 86 600 km².
 
 Mäged ottas valdkundan pol't, [[Kavkaz]]an Sur' mägisel'g om pohjoižes, Pen' sel'g otab päivlaskmad da suved. Kuran da Araksan alangišt otab Azerbaidžanan keskuzpalad. Znamasine jogi om [[Kur (jogi Kavkazantaguižes)|Kur]] ({{lang-az|Kür}}), lankteb Kaspijan merhe.
@@ -44,7 +44,7 @@ Klimat om erazvuitte, [[subtropine vö|subtropižes vönespäi]] korktoiden mäg
 Londuseližed pävarad oma [[kivivoi]], [[londuseline gaz]], [[raud|raudkivend]], [[alüminii|boksitad]], [[gidroenergii]].
 
 == Politine sistem ==
-[[Fail:Baku 7.JPG|thumb|right|250px|Azerbaidžanan ohjastusen pert' [[Baku]]s.]]
+[[Fail:2013 Military parade in Baku 04.jpg|thumb|right|250px|Azerbaidžanan ohjastusen pert' [[Baku]]s]]
 Ohjandusen form om unitarine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund dominirujanke partijanke. Valdkundan pämez' om prezident ({{lang-az|Prezidenti}}), kaik rahvaz valičeb händast seičemeks vodeks strokuiden röunatusita. Prezident paneb ohjastusen kaikid valdkundmehid radsijha, sidä kesken päministrad ({{lang-az|Azərbaycan baş nazirlərinin siyahısı}}).
 
 Parlament om üks'kodine Nacionaline Suim ({{lang-az|Milli Məclis}}) 125 ühtnijanke, mugažo rahvaz valičeb kaikid heid videks vodeks.
