--- a/Konseps'jon.mw
+++ b/Konseps'jon.mw
@@ -8,11 +8,12 @@
  | Eläjiden lugu = 223,574
  | Voz' = 2017
  | Pind = 221.6
- | Fail = Ciudad-Puerto-de-Concepción.png
+ | Fail = Concepcion Centro.jpg
  | Pämez' = Al'varo Ortiz<br />(tal'vku 2012—)
  | Telefonkod = +56-41
  | Aigvö = tal'vel [[UTC]]−4,<br/>kezal [[UTC]]−3
 }}
+[[Fail:Grande Concepción.png|thumb|left|250px|Lidnan kart ezilidnoidenke (2015)]]
 '''Konseps'jon''' ({{lang-es|Concepción}} [kon.sepˈsjon]) om lidn [[Čili]]n keskuzpalas. Se om [[Biobion agj]]an administrativine keskuz.
 
 == Istorii ==
