Tühjitadud toižetuz 146525, kudamban tegi Kwamikagami (arutelu)

--- a/Ma.mw
+++ b/Ma.mw
@@ -1,7 +1,7 @@
 {{1000}}{{A10000}}
 {{Znamoičendad|Ma (znamoičendad)}}
 [[Fail:The Earth seen from Apollo 17.jpg|thumb|right|250px|Man fotokuva [[Apollon-17]]-apparataspäi]]
-'''Ma''' ([[latinan kel'|latinan kelel]]: ''Tellus'' vai ''Terra'') om koumanz' [[planet]] [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, kaikiš jaredamb diametran da vedusen mödhe Maižen gruppan planetoiden ([[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], Ma i [[Mars (planet)|Mars]]) keskes, tihedusen (ninevusen) mödhe — sisteman kaikiden planetoiden keskes. Man astronomižed znamad oma [[Fail:Globus cruciger (bold).svg|16px|♁]] i [[Fail:Earth symbol (bold).svg|16px|🜨]].
+'''Ma''' ([[latinan kel'|latinan kelel]]: ''Tellus'' vai ''Terra'') om koumanz' [[planet]] [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, kaikiš jaredamb diametran da vedusen mödhe Maižen gruppan planetoiden ([[Merkurii (planet)|Merkurii]], [[Vener (planet)|Vener]], Ma i [[Mars (planet)|Mars]]) keskes, tihedusen (ninevusen) mödhe — sisteman kaikiden planetoiden keskes. Man astronomižed znamad oma ♁ i [[Fail:Earth symbol (bold).svg|16px|🜨]].
 
 == Sijaduz ==
 Matkad Maspäi Päiväižhesai om 149 597 887 kilometrad vai 1 [[astronomine ühtnik]]. Planet punose Päiväižes ümbri da tegeb kogonašt pörut 365,26 päiviš. Mugažo se punose ičeze värtmudes ümbri da tegeb kogonašt pörut 23 časus 56 minutas i 4.091 sekundas.
