toine kuva kadonuden sijha

--- a/Jel'n'.mw
+++ b/Jel'n'.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 8,993
  | Voz' = 2018-01-01
  | Pind = 15
- | Fail = Стела Город воинской славы в Ельне.jpg
+ | Fail = Yelnya 20170623 181434.jpg
  | Pämez' = Irina Bogačeva<br />(viluku 2019—.<br />''velgusentäutai'')
  | Telefonkod = +7-48146-xx-xxx
  | Avtokod = 67
