toine kuva kadonuden sijha

--- a/Sofii.mw
+++ b/Sofii.mw
@@ -40,7 +40,7 @@ Vn 2011 rahvahanlugemižen mödhe [[bolgarijalaižed]] (87,9%) da [[ortodoksine 
 StGeorgeRotundaSofia.JPG|Ph. Jurgijan jumalanpert'<br />(4. voz'sada, vn 2004 nägu),<br />«Šeraton»-adivpert' om tagamal
 Sof.University~1935.jpg|Sofijan universitet<br />vl 1935
 Narsob3.jpg|Ripmatomuden torg socializman Largo-ansamblinke
-NDK-front-view.jpg|Rahvahaline kul'turkeskuz
+Tzar's Palace Sofia.jpg|Rahvahaline čomamahtoine galerei
 NationalAssemblySquare.jpg|Rahvahaližen Suiman torg
 </gallery>
 
