toine kuva kadonuden sijha

--- a/Lobotomii.mw
+++ b/Lobotomii.mw
@@ -1,4 +1,4 @@
-[[Fail:Icepicks1.jpg|thumb|right|250px|Orbitoklast — instrument lobotomijan tegendan täht]]
+[[Fail:Leucotome.gif|thumb|right|250px|Leikotom — instrument lobotomijan tegendan täht]]
 '''Lobotomii''' ({{lang-grc|λοβός}} ''lobos'' «pala» i τομή ''tomi'' «čapatez»), mugažo tetab kuti '''leikotomii''' ({{lang-grc|λευκός}} ''leukos'' «vauged» i τομή ''tomi'' «čapatez») om [[neirohirurgii|neirohirurgine]] operacii, kudamban aigan leikatas kudehid [[päaivod|päaivoiden]] ocpaloiden i niiden toižen palan keskes.
 
 Prefrontaline lobotomii om lobotomijan toižend, ezimeletab ocpaloiden palahišt heitandad. Sen jäl'ghe pacient sab elon hätkte «ocpalan sindrom»-diagnozad.
