kuva kadonuden montažan sijha

--- a/Dublin.mw
+++ b/Dublin.mw
@@ -9,7 +9,7 @@
  | Eläjiden lugu = 553,165
  | Voz' = 2016
  | Pind = 114.99
- | Fail = DublinMontage.jpg
+ | Fail = Dublin - St. Joseph's Church - 20200927185225.jpg
  | Pämez' = Pol Makoliff (kezaku 2019 — kezaku 2020.<br />{{lang-en|Paul McAuliffe}})
  | Telefonkod = +353-(0)1
  | Aigvö = tal'vel [[UTC]]+0,<br />kezal [[UTC]]+1
