eile kuvad vikiaitas

--- a/Dedüško_Aleksandr.mw
+++ b/Dedüško_Aleksandr.mw
@@ -1,6 +1,4 @@
-{{Personalii
-| изображение = 0
-}}
+{{Personalii}}
 '''Aleksandr Viktorovič Dedüško''' ({{lang-be|Аляксандр Віктаравіч Дзядзюшка}}, {{lang-ru|Александр Викторович Дедюшко}}; sünd. [[20. semedku]] [[1962]], [[Volkovisk]], [[Grodnon agj]], [[Vaugedvenäma|Vaugedvenäman NST]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[3. kül'mku]] [[2007]], [[Vladimiran agj]], [[Venäma]]) oli tutab venämalaine teatran- da kinoakt'or.
 
 == Homaičendad ==
