--- a/Barto_Agnija.mw
+++ b/Barto_Agnija.mw
@@ -1,7 +1,4 @@
-{{Personalii
-| изображение = 0
-|
-}}
+{{Personalii}}
 [[Fail:Barto toys.jpg|thumb|left|250px|Vn 1936 «Igruški»-kirjan kor' (''Bobaižed'', pirdi K. Kuznecov)]]
 '''Agnija L'vovna Barto''' ({{lang-ru|Агния Львовна Барто}}), todesine nimi — '''Gitel' Leibovna Volova''' (ven.: ''Гитель Лейбовна Волова''; sünd. [[4. uhoku]] [[1906]], [[Kaunas|Kovno]], [[Venäman imperii]] — kol. [[1. sulaku]] [[1981]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]), oli tetab nevondkundaline lapsenrunokirjutai, radiovedai da kinotarinantegii.
 
