toine kuva kadonuden sijha

--- a/Keins_Džon_Meinard.mw
+++ b/Keins_Džon_Meinard.mw
@@ -1,9 +1,9 @@
 {{1000}}{{A10000}}
 {{Personalii
-| изображение = Lord Keynes.jpg
-| описание изображения = Keins-lord vl 1940
+| изображение = Lopokova and Keynes 1920s cropped.jpg
+| описание изображения = Džon Meinard Keins 1920-nzil vozil
 }}
-'''Džon Meinard Keins''' ({{lang-en|John Maynard Keynes}}; sünd. [[5. kezaku]] [[1883]], [[Kembridž]], [[Anglii]], [[Sur' Britanii]] — kol. [[21. sulaku]] [[1946]], Tilton-usadib läz Förl-küläd, [[Päivnouzmaine Susseks]]-grafkund, Anglii, Sur' Britanii) oli britanine (anglijalaine) ekonomist.
+'''Džon Meinard Keins''' ({{lang-en|John Maynard Keynes}}; sünd. [[5. kezaku]] [[1883]], [[Kembridž]], [[Anglii]], [[Sur' Britanii]] — kol. [[21. sulaku]] [[1946]], Tilton-usadib läz Förl-küläd, [[Päivnouzmaine Susseks]]-grafkund, Anglii, Sur' Britanii) oli britanine (anglijalaine) ekonomist, lord.
 
 Tedomez' pani ekonomižen teorijan [[keinsianižuz]]-čuradusen alust, [[makroekonomik]]-tedon üks' sädajišpäi. Sen ližaks, Keins om [[logine naceinuz|ühten naceinuden teorijoišpäi]] tegijan.
 
