--- a/Lamborghini_Estoque.mw
+++ b/Lamborghini_Estoque.mw
@@ -1,16 +1,17 @@
 [[Fail:Lamborghini Estoque 2.JPG|thumbnail|right|250px|«Lamborghini Estoque» ozutelendan aigan.]]
-'''«Lamborghini Estoque»''' om [[Italii|italijalaižen]] «[[Lamborghini]]»-kompanijan [[konceptavto]] [[sedan]]-klassas.
+'''«Lamborghini Estoque»''' om [[Italii|italijalaižen]] «[[Lamborghini]]»-kompanijan [[konceptavto]] [[sedan]]-klassas. Sijadase kompanijan muzejas.
 
-Vl 2008 om ezitadud [[Parižan avtosalon]]al.
+Vl 2008 avto om ezitadud [[Parižan avtosalon]]al. Se om nell'uksine, kaik nell' kezrad oma vedajad.
 
 == Harakteristik ==
-* Likutim: 5,2 litrad (560 hebonväged) V10
+* Likutim: 5,2 litrad (560 hebonväged vai 412 kVt) V10
+* Irdmärad: 5148 mm pitte, 1991 mm levette, 1351 mm korkte
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [http://www.conceptcarz.com/vehicle/z15841/Lamborghini-Estoque-Concept.aspx Lehtpol' ''Conceptcarz.com''-saital.] {{ref-en}}
+* [http://www.conceptcarz.com/vehicle/z15841/Lamborghini-Estoque-Concept.aspx Lehtpol' ''conceptcarz.com''-saital.] {{ref-en}}
 {{Commons|Category:Lamborghini Estoque}}
 
 {{stub}}
