--- a/Lamborghini_Estoque.mw
+++ b/Lamborghini_Estoque.mw
@@ -1,11 +1,14 @@
 [[Fail:Lamborghini Estoque 2.JPG|thumbnail|right|250px|«Lamborghini Estoque» ozutelendan aigan.]]
 '''«Lamborghini Estoque»''' om [[Italii|italijalaižen]] «[[Lamborghini]]»-kompanijan [[konceptavto]] [[sedan]]-klassas. Sijadase kompanijan muzejas.
 
-Vl 2008 avto om ezitadud [[Parižan avtosalon]]al. Se om nell'uksine, kaik nell' kezrad oma vedajad.
+Vl 2008 lüksavto om ezitadud [[Parižan avtosalon]]al. Se om nell'uksine, kaik nell' kezrad oma vedajad.
 
 == Harakteristik ==
 * Likutim: 5,2 litrad (560 hebonväged vai 412 kVt) V10
-* Irdmärad: 5148 mm pitte, 1991 mm levette, 1351 mm korkte
+* Transmissii: 7 pigut
+* Irdmärad: 5150 mm pitte, 1990 mm levette, 1350 mm korkte
+* Kezroiden baz: 3010 mm
+* Veduz: 1665 kg
 
 == Homaičendad ==
 <references/>
