*Empty MediaWiki Message*

--- a/Lamborghini_Estoque.mw
+++ b/Lamborghini_Estoque.mw
@@ -1,4 +1,4 @@
-[[Fail:Lamborghini Estoque 2.JPG|thumbnail|right|250px|«Lamborghini Estoque» ozutelendan aigan.]]
+[[Fail:Lamborghini Estoque 2.JPG|thumbnail|right|250px|«Lamborghini Estoque» ozutelendan aigan]]
 '''«Lamborghini Estoque»''' (ispanijan virkand: [esˈtoke]) om [[Italii|italijalaižen]] «[[Lamborghini]]»-kompanijan [[konceptavto]] [[sedan]]-klassas. Sijadase kompanijan muzejas.
 
 Vl 2008 lüksavto om ezitadud [[Parižan avtosalon]]al. Se om nell'uksine, kaik nell' kezrad oma vedajad.
@@ -6,7 +6,7 @@ Vl 2008 lüksavto om ezitadud [[Parižan avtosalon]]al. Se om nell'uksine, kaik 
 Vn 2009 22. päiväl keväz'kud oli tedotadud, miše kompanii pučihe avton äikerdoičendaspäi.
 
 == Harakteristik ==
-* Likutim: frontaline, 5,2 litrad (560 hebonväged vai 412 kVt) V10
+* Likutim: frontaline, 5,2 litrad V10, vägevuz — 560 hebonväged vai 412 kVt
 * Transmissii: 7 pigut
 * Irdmärad: 5150 mm pitte, 1990 mm levette, 1350 mm korkte
 * Kezroiden baz: 3010 mm
