--- a/Poskröbiševa_Galina.mw
+++ b/Poskröbiševa_Galina.mw
@@ -1,5 +1,11 @@
 {{Personalii}}
-'''Galina Ivanovna Poskröbiševa''' ({{lang-ru|Галина Ивановна Поскрёбышева}}; sünd. [[4. kül'mku]] [[1935]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[1. sulaku]] [[2008]], [[Venäma]]) oli nevondkundaline da venämalaine [[dietolog]], TV-vedai da kirjutai.
+'''Galina Ivanovna Poskröbiševa''' ({{lang-ru|Галина Ивановна Поскрёбышева}}; sünd. [[4. kül'mku]] [[1935]], [[Nevondkundaline Ühtištuz|NSTÜ]] — kol. [[1. sulaku]] [[2008]], [[Venäma]]) oli nevondkundaline da venämalaine [[dietolog]], TV-programiden vedai, kümenikoiden kirjoiden tegii, [[kulinarii|kulinarijas]] tobjimalaz.
+
+Poskröbiševa lopi opendust [[Moskv]]an medicinižes institutas i radoi ohjastusen kirhuližen abun palakundas (nomer 4) lähtendhasai penzijha.
+
+Naine vedi televizijas nenid oigendusid: «Naš sad» (''Meiden sad''), «Domašnii očag» (kaks'kümne vot oiktas efiras, ''Kodilezi''), «Russkii ogorod» (''Venälaine linma''). Ühtni «Russkii dom»-programha (''Venälaine pert''').
+
+Tat oli sodalendai. Naine sünduti tütärt i poigad.
 
 == Homaičendad ==
 <references/>
