--- a/Poskröbiševa_Galina.mw
+++ b/Poskröbiševa_Galina.mw
@@ -14,8 +14,11 @@ Tat oli sodalendai. Naine sünduti tütärt i poigad.
 [[Kategorii:Dietologad]]
 [[Kategorii:NSTÜ:n TV-vedajad]]
 [[Kategorii:NSTÜ:n kirjutajad]]
+[[Kategorii:NSTÜ:n lehtezmehed]]
 [[Kategorii:Venäman TV-vedajad]]
 [[Kategorii:Venäman kirjutajad]]
+[[Kategorii:Venäman lehtezmehed]]
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
+[[Kategorii:Lehtezmehed kirjamišton mödhe]]
 [[Kategorii:TV-vedajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
