--- a/Psalmoiden_kirj.mw
+++ b/Psalmoiden_kirj.mw
@@ -4,6 +4,8 @@
 
 Kirj kogoneb 150 vai 151 pajospäi (psalmaspäi). Om erazvuiččid melid pajoiden augotižlibundas: Jumalaspäi, vajehtadud ristituil Hänen pajod, mehidespäi.
 
+Runoorganizacii om kirjas, i voib pidada sidä poemaks. Pajoiden temad oma erazvuiččed: pühätadud Jumalale pajod, loičendad (6, 50), avarod zall'oičendad (43, 101), kirodused (57, 108), istorižed ümbrikacmižed (105), naindpajo eskai (44).
+
 [[2013]]. vodel psalmoiden kirj om pästtud [[vepsän kel'|vepsän kelel]]. Kändai om [[Zaiceva Nina|Nina Zaiceva]].
 
 == Homaičendad ==
