--- a/Tommot.mw
+++ b/Tommot.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Tommot<br />Томмот <small>(ven. i jakut.)</small>
- | Lidnanznam = Tommot city coa proj 90x.gif
- | Flag = 
+ | Lidnanznam = Tommot city coa.gif
+ | Flag = Tommot city fl.gif
  | Lidnanznam text = Tommotan lidnanznam
- | Flag text = 
+ | Flag text = Tommotan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 7,046
  | Voz' = 2017
@@ -14,7 +14,6 @@
  | Avtokod = 14
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
 }}
-[[Fail:Tommot station.jpg|thumb|left|250px|Tommot-raudtestancii vagzalan sauvusenke.]]
 '''Tommot''' ([[venäkel'|ven]]. i {{lang-sah|Томмот}} — «jädumatoi» jakutan kelel) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an suves. Mülüb [[Aldanan rajon]]ha.
 
 == Istorii ==
@@ -32,11 +31,11 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 8 05
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-|
-Поездка в Северомуйск (020).jpg|Ortodoksižen hristanuskondan pühäpert' om sauvomas, vn 2018 nägu
-|
+Поездка в Северомуйск (014).jpg|Tommotan sanatorine škol-internat (2018)
+Поездка в Северомуйск (020).jpg|Ortodoksižen hristanuskondan pühäpertin sauvomine, vn 2018 nägu
 Шашлычная около Томмота.jpg|Surustuzsija läz lidnad (2013)
-|
+Tommot-yard.jpg|Tommot-stancijan jügutanaz vl 2006
+Tommot station.jpg|Tommot-raudtestancii vagzalan sauvusenke
 </gallery>
 
 == Homaičendad ==
