--- a/Tommot.mw
+++ b/Tommot.mw
@@ -14,6 +14,7 @@
  | Avtokod = 14
  | Aigvö = [[UTC]]+9 ([[MSK]]+6)
 }}
+[[Fail:010 Томмот.jpg|thumb|left|250px|Avtotesild Aldanas päliči (2006)]]
 '''Tommot''' ([[venäkel'|ven]]. i {{lang-sah|Томмот}} — «jädumatoi» jakutan kelel) om [[Venäma]]n lidn da lidnankund [[Saha Tazovaldkund]]an suves. Mülüb [[Aldanan rajon]]ha.
 
 == Istorii ==
