--- a/Habarovsk.mw
+++ b/Habarovsk.mw
@@ -1,15 +1,15 @@
 {{Eländpunkt
  | Nimi = Habarovsk<br />Хабаровск
  | Lidnanznam = Coat of Arms of Khabarovsk.svg
- | Flag = Flag of Khabarovsk (Khabarovsk kray).png
+ | Flag = Flag of Khabarovsk.svg
  | Lidnanznam text = Habarovskan lidnanznam
  | Flag text = Habarovskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 616,242
- | Voz' = 2017
+ | Eläjiden lugu = 610,305
+ | Voz' = 2021
  | Pind = 383
- | Fail = Amurbridge2.jpg
- | Pämez' = Aleksandr Sokolov<br />(2000—)
+ | Fail = Уссурийский бульвар.jpg
+ | Pämez' = Sergei Kravčuk<br />(sügüz'ku 2018—)
  | Telefonkod = +7-4212-xxx-xxx
  | Avtokod = 27
  | Aigvö = [[UTC]]+10 ([[MSK]]+7)
@@ -25,24 +25,24 @@ Eländpunktan aluz om pandud vl 1858 kuti ''Habarovk-sodapost''. Om nimitadud 17
 == Geografijan andmused ==
 Lidn sijadase rahvahidenkeskeižiden raudteiden da il'mteiden läbitusen keskuses, [[Amur|Amur-jogen]] oiktal randal Keskamuran alangištos, läz [[Kitai]]n röunad. Mad [[Moskv]]hasai om läz 6100 kilometrad, matkad raudtedme — 8533 km.
 
-Habarovsk jagase vidhe administrativižhe rajonha. Se om üks'jäine eländpunkt lidnümbrikos.
+Habarovsk jagase videks administrativižeks rajonaks. Se om üks'jäine eländpunkt lidnümbrikos.
 
 == Eläjad da transport ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 577 441 ristitud. Kaikiš suremb ristitišt oli vl 1990 (616 tuhad) i om nügüd' (vl 2017).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 577 441 ristitud. Kaikiš suremb ristitišt oli 616 tuhad eläjid vl 1990 i 618 150 eläjad vl 2018.
 
-Om kaks' lendimportad lidnas, nell' raudtestancijad, avtoteiden sol'm, jogiport.
+Kaik om kaks' lendimportad lidnas, nell' raudtestancijad, avtoteiden sol'm, jogiport.
 
 == Rahvahidenkeskeižed kosketused ==
-[[Fail:Ерофей Хабаров 2.jpg|thumb|right|250px|Monument Habarovan Erofein muštho.]]
+[[Fail:Ерофей Хабаров 2.jpg|thumb|right|250px|Monument Habarovan Erofein muštho]]
 === Verazmaižed konsulused ===
-Nene valdkundad oma konsulusid Habarovskas:
+Nenil valdkundoil om konsulusid Habarovskas:
 * {{BLR|#}} [[Vaugedvenäma]]
 * {{CHN|#}} [[Kitai]]
 * {{JAP|#}} [[Japonii]]
 * {{PRK|#}} [[Korejan Rahvahaliž-Demokratine Tazovaldkund|Pohjoižkorei]]
 
 === Sebruzlidnad ===
-Nügüd' Habarovskal om 7 sebruzlidnad<ref>[http://khabarovsk.kht.ru/about/sistercity.htm Informacii ühthižtöiš sebruzlidnoidenke. — ''Khabarovsk.kht.ru''.] {{ref-ru}}</ref>:
+Nügüd' seičeme sebruzlidnad om Habarovskal<ref>[http://khabarovsk.kht.ru/about/sistercity.htm Informacii ühthižtöiš sebruzlidnoidenke. — ''Khabarovsk.kht.ru''.] {{ref-ru}}</ref>:
 * {{JAP|#}} [[Niigat]], [[Japonii]] (vspäi 1965)
 * {{USA|#}} [[Portlend (Oregon)|Portlend]], [[Oregon]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]] (1988)
 * {{CAN|#}} [[Viktorii (Britanine Kolumbii)|Viktorii]], [[Britanine Kolumbii]], [[Kanad]] (1990)
@@ -50,6 +50,20 @@ Nügüd' Habarovskal om 7 sebruzlidnad<ref>[http://khabarovsk.kht.ru/about/siste
 * {{KOR|#}} [[Pučhon]], [[Köngido]], [[Korejan Tazovaldkund|Suvikorei]] (2002)
 * {{CHN|#}} [[Sanj (lidn)|Sanj]], [[Hainan']], [[Kitai]] (2011)
 * {{PRK|#}} [[Čhondžin]], [[Hamgön-Pukto]], [[Korejan Rahvahaliž-Demokratine Tazovaldkund|Pohjoižkorei]] (2011)
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Russia. Khabarovsk. City administration 2015.JPG|Lidnan Duman i administracijan sauvuz (2015)
+Kirovskiy rayon, Khabarovsk, Khabarovskiy kray, Russia - panoramio (213).jpg|Spasan Toižetamižen kafedraline päjumalanpert', vn 2015 nägu (om saudud vll 2001−2004, ortodoksine hristanuskond)
+Aerial view of Khabarovsk.jpg|Habarovskan kivivoinümbriradai tegim i ''Habarovsk I''-raudtestancii vl 2012
+Togu entrance.jpg|Tün'valdmerine valdkundaline universitet, keskuztulend (2009)
+Russia. Khabarovsk. Far Eastern State Medical University 2016.jpg|Edahaižen Päivnouzmpolen valdkundaline medicinine universitet (2016)
+Хабаровск. Театр музыкальной комедии.jpg|Randan muzikaline teatr (2011)
+Здание дореволюционной городской думы Хабаровск.JPG|Lapsiden i norišton sädamižen pert'kulu (2012, edel vn 1917 revolücijad lidnan Duman pert')
+Russia. Khabarovsk. Arena Yerofey 2016.jpg|«Erofei-aren»-sportkompleks vl 2016
+Хабаровский мост в мае 2013.JPG|Raudte- i avtotesild Amuras päliči vl 2013 (om rekonstruiruidud vll 1992−2009)
+Международный аэропорт Новый (Хабаровск).jpg|Habarovsk-Uz'-lendimportan vaiše avaitud terminal vn 2019 redukus
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Dätlov Evgenii|Evgenii Dätlov]] (sünd. 1963) — Venäman akt'or da pajatai.
