--- a/Habarovsk.mw
+++ b/Habarovsk.mw
@@ -32,6 +32,8 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 577 441 ristitud. 
 
 Kaik om kaks' lendimportad lidnas, nell' raudtestancijad, avtoteiden sol'm, jogiport.
 
+Edeline lidnan pämez' om Aleksandr Sokolov (2000−2018).
+
 == Rahvahidenkeskeižed kosketused ==
 [[Fail:Ерофей Хабаров 2.jpg|thumb|right|250px|Monument Habarovan Erofein muštho]]
 === Verazmaižed konsulused ===
