--- a/Amursk.mw
+++ b/Amursk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Amursk<br />Амурск
- | Lidnanznam = Coat of Arms of Amursk (Khabarovsk kray).png
+ | Lidnanznam = Coat of Arms of Amursk (Khabarovsk krai) 2011.png
  | Flag = Flag of Amursk (Khabarovsk kray).png
  | Lidnanznam text = Amurskan lidnanznam
  | Flag text = Amurskan flag
@@ -8,12 +8,13 @@
  | Eläjiden lugu = 39,431
  | Voz' = 2018
  | Pind = 145
- | Fail = Амурск, 2015 год ф1.JPG
+ | Fail = Amursk P7270005 2200.jpg
  | Pämez' = Kristina Černicina<br />(sügüz'ku 2018—)
  | Telefonkod = +7-42142-xx-xxx
  | Avtokod = 27
  | Aigvö = [[UTC]]+10 (MSK+7)
 }}
+[[Fail:Амурск музей.jpg|thumb|left|250px|Lidnan kodirandantedištandmuzei (2016)]]
 '''Amursk''' ({{lang-ru|Амурск}}) om [[Venäma]]n lidn da lidnankund [[Habarovskan rand]]an suvipalas. Se om [[Amurskan rajon]]an administrativine keskuz.
 
 == Istorii ==
@@ -34,6 +35,16 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 42 970 ristitud, r
 Amurskan politehnine tehnikum om professionaližen opendusen aluzkundaks.
 
 Edeline lidnan pämez' oli Boris Red'kin (2005−2018).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Амурск, июль 2015 года (83).JPG|Amurskan rajonan administracijan sauvuz (2015)
+Амурск, июль 2015 года (33).JPG|ZAGS:an sauvuz, vn 2015 nägu
+Amursk Amursk combined heat and power plant P7290079 2200.jpg|Amurskan LEK-1 vl 2015
+Амурск дом культуры и здание полиции.JPG|Kul'turkeskuz i policijan sauvuz (2015)
+Амурск, июль 2015 года (38).JPG|Lidnan sündutamižkodi (2015)
+</gallery>
+[[Fail:Амурск, июнь 2016 (152кроп).jpg|thumb|center|1000px|<center>Lidnan nägu Vanh Amur-hijamaspäi vn 2016 kezakus</center>]]
 
 == Irdkosketused ==
 * [http://amursk.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''amursk.ru'').] {{ref-ru}}
